@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8296 2009/07/27 13:03:28 obache Exp $
+$NetBSD: TODO,v 1.8297 2009/07/29 06:36:59 adam Exp $
 
 Suggested new packages
 ======================
@@ -1056,7 +1056,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o poppy-4.01
 	o posh-0.5.5
 	o postal-0.70
-	o postgresql-8.4.0
 	o powermanga-0.90
 	o pptp-1.7.1 [pkg/38038]
 	o prelude-correlator-0.9.0beta6 [pkg/41763]
