@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2009,v 1.2873 2009/07/28 21:35:28 seb Exp $
+$NetBSD: CHANGES-2009,v 1.2874 2009/07/29 06:36:59 adam Exp $
 
 Changes to the packages collection and infrastructure in 2009:
 
@@ -3815,3 +3815,10 @@ Changes to the packages collection and infrastructure in 2009:
 	Updated textproc/db2latex to 0.8pre1nb6 [minskim 2009-07-28]
 	Updated www/wordpress to 2.8.2 [adrianp 2009-07-28]
 	Added devel/p5-MooseX-Meta-TypeConstraint-ForceCoercion version 0.01 [seb 2009-07-28]
+	Added databases/postgresql84 version 8.4.0 [adam 2009-07-29]
+	Added databases/postgresql84-client version 8.4.0 [adam 2009-07-29]
+	Added databases/postgresql84-server version 8.4.0 [adam 2009-07-29]
+	Added databases/postgresql84-adminpack version 8.4.0 [adam 2009-07-29]
+	Added databases/postgresql84-plperl version 8.4.0 [adam 2009-07-29]
+	Added databases/postgresql84-plpython version 8.4.0 [adam 2009-07-29]
+	Added databases/postgresql84-pltcl version 8.4.0 [adam 2009-07-29]
